# notebook-clean-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: sample.txt
src/notebook_clean_check/: __init__.py  __main__.py  cli.py  core.py  rules.py
tests/: test_notebook_clean_check.py
